--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,12 +18,12 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.jayantajm1 }}
-          password: ${{ secrets.Spideyjm@3014 }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ${{ secrets.jayantajm1 }}/dotnet-postgres-demo:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/dotnet-postgres-demo:latest
